--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1>Tap List</h1>
+    <main>
+      <h1 id="title">Tap List</h1>
+      <section id="taplist-container"></section>
+    </main>
   </body>
 </html>
