--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tap List</title>
-    <script src="./js/display.js" defer></script>
     <link rel="stylesheet" href="./styles.css" />
+    <script src="./js/display.js" defer></script>
   </head>
   <body>
-    <main>
+    <main id="taplist">
       <h1 id="title">Tap List</h1>
       <section id="taplist-container"></section>
     </main>
