--- a/public/admin.html
+++ b/public/admin.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/images/defaultImage.png" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="./admin-styles.css" />
     <script src="./js/admin.js" defer></script>
@@ -20,6 +21,7 @@
         <option value="light">Light</option>
         <option value="dark">Dark</option>
         <option value="retro">Retro</option>
+        <option value="chalkboard">Chalkboard</option>
         <option value="custom">Custom</option>
       </select></label
     >
@@ -41,6 +43,40 @@
         />
       </label>
     </div>
+    <label for="font-family-select"
+      >Font Family:
+      <select
+        id="font-family-select"
+        name="font-family"
+        onchange="handleFontChange(event)"
+      >
+        <option value="system-ui">System UI</option>
+        <option value="sans-serif">Sans-serif</option>
+        <option value="serif">Serif</option>
+        <option value="monospace">Monospace</option>
+        <option value="Arial, sans-serif">Arial</option>
+        <option value="Georgia, serif">Georgia</option>
+        <option value="Tahoma, sans-serif">Tahoma</option>
+        <option value="Times New Roman, serif">Times New Roman</option>
+        <option value="Verdana, sans-serif">Verdana</option>
+        <option value="Courier New, monospace">Courier New</option>
+        <option value="Chalkboard, sans-serif">Chalkboard</option>
+      </select></label
+    >
+    <label for="card-border-radius">
+      Card Rounding
+      <input
+        type="range"
+        name="card-border-radius"
+        id="card-border-radius"
+        min="0"
+        max="4"
+        step="0.01"
+        oninput="updateRangeInput(event)"
+        onchange="persistUpdates()"
+      />
+    </label>
+
     <section id="taplist-container">
       <div class="wrapper">
         <div class="tap-group">
@@ -60,5 +96,24 @@
         </div>
       </div>
     </section>
+    <form
+      id="image-upload-form"
+      enctype="multipart/form-data"
+      onsubmit="uploadImage(event)"
+    >
+      <label for="image">Upload Label Image:</label>
+      <div class="file-upload" id="drop-zone">
+        <label for="file-input" class="button">Choose File</label>
+        <span id="file-name">No file selected</span>
+        <input type="file" id="file-input" name="image" hidden />
+      </div>
+      <button type="submit">Upload</button>
+    </form>
+    <h3>Label Art Gallery</h3>
+    <div id="image-gallery"></div>
+    <label for="image-select"
+      >Label Image
+      <select id="image-select"></select
+    ></label>
   </body>
 </html>
