--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tap List</title>
+    <link rel="icon" type="image/x-icon" href="/images/defaultImage.png" />
     <link rel="stylesheet" href="./styles.css" />
     <script src="./js/display.js" defer></script>
   </head>
