--- a/public/admin.html
+++ b/public/admin.html
@@ -11,6 +11,11 @@
   </head>
   <body>
     <h1>Admin Dashboard</h1>
+    <label for="taplist-name">
+      Taplist Title
+      <input type="text" name="taplist-name" id="taplist-name" />
+    </label>
+
     <label for="fade-time-seconds" class="setting-label">
       Time per Page (seconds)
       <input
