allow more customization for card-width and font

--- a/public/admin.html
+++ b/public/admin.html
@@ -64,6 +64,19 @@
         <option value="Chalkboard, sans-serif">Chalkboard</option>
       </select></label
     >
+
+    <label for="font-size-body">
+      Font Size
+      <input
+        type="range"
+        name="font-size-body"
+        id="font-size-body"
+        min="0.5"
+        max="2"
+        step="0.01"
+      />
+    </label>
+
     <label for="card-border-radius">
       Card Rounding
       <input
@@ -73,6 +86,18 @@
         min="0"
         max="4"
         step="0.01"
+      />
+    </label>
+
+    <label for="card-min-width">
+      Minimum Card Width
+      <input
+        type="range"
+        name="card-min-width"
+        id="card-min-width"
+        min="100"
+        max="1000"
+        step="10"
       />
     </label>
 
